; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/test/unit/extr_junk.c_shrink_size.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/test/unit/extr_junk.c_shrink_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @shrink_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @shrink_size(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = sub i64 %4, 1
  store i64 %5, i64* %3, align 8
  br label %6

6:                                                ; preds = %12, %1
  %7 = load i64, i64* %3, align 8
  %8 = call i64 @nallocx(i64 %7, i32 0)
  %9 = load i64, i64* %2, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %6
  br label %12

12:                                               ; preds = %11
  %13 = load i64, i64* %3, align 8
  %14 = add i64 %13, -1
  store i64 %14, i64* %3, align 8
  br label %6

15:                                               ; preds = %6
  %16 = load i64, i64* %3, align 8
  ret i64 %16
}

declare dso_local i64 @nallocx(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
